[project]
name = "pyls"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "setuptools>=68",
    "xattr>=1.3.0",
]

[project.scripts]
pyls = "pyls.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ty.src]
include = ["src", "tests"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
# まずは定番だけ（必要になったら増やす）
select = ["E", "F", "I", "UP"]
# E: pycodestyle / F: pyflakes / I: import sort / UP: pyupgrade

[tool.uv]
package = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[tool.ruff.lint.pylint]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ty>=0.0.7",
    "ruff>=0.12.0",
    "pytest-cov>=7.0.0",
]
